	chokes on __contructor__ attribute.

	* include/libbk.h (realloc): Redefine realloc() when INSURE is on,
	otherwise you must deal with a multitude of FREE_NULL "errors".

2003-01-23  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_nvmap.c (bk_nvmap_name2value): Type int values to
	u_int64_t so pointers can be held in nvmaps.

2003-01-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_exec.c: Update users of tokenization to handle new
	variable expansion arguments

	* lib/b_string.c (bk_string_tokenize_split): Add variable
	expansion (two methods: CLC and environ)

2003-01-09  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_md5.c (bk_MD5Update): Changed inBuf parameter from char *
	to const char *.

	* lib/b_string.c (bk_string_alloc_vsprintf): Added
	bk_string_alloc_vsprintf and changed the implementation of
	bk_string_alloc_sprintf accordingly.

2002-12-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): partial fix for ticket #963:
	always allow whitespace chars, implement entity-encoding correctly,
	and use sizeof rather than strlen
	
2002-12-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_fileutils.c: note additional security flaws in this code

2002-11-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_NSECTOUSEC, BK_USECTONSEC): avoid overflow,
	perform rounding on nsec->usec conversion

2002-11-20  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_fileutils.c (bk_file_unlock): Change sprintf to snprintf.

2002-11-19  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* include/libbk.h: Add autoconf'd BK-IN6_IS_ADDR_MULTICAST.

2002-11-18  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_last_error): Get the last bkio errno.

2002-11-14  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_fileutils.c (bk_fileutils_is_true_pipe): Added function to
	test whether a file descriptor points at a true pipe.
