@@ -1,5 +1,5 @@
 /*
- * $Id: libbk_internal.h,v 1.32 2002/11/18 19:17:02 lindauer Exp $
+ * $Id: libbk_internal.h,v 1.33 2003/02/08 01:57:17 dupuy Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -104,7 +104,7 @@ struct bk_polling_io
 #define BPI_FLAG_WRITE_DEAD		0x4	///< Our write side is in permement ruins.
 #define BPI_FLAG_SAW_EOF		0x8	///< We have seen EOF.
 #define BPI_FLAG_DONT_DESTROY		0x10	///< Tell io hander not destroy bpi.
-#define BPI_FLAG_IOH_DEAD		0x20	///< Tell io hander not destroy bpi.
+#define BPI_FLAG_IOH_DEAD		0x20	///< Bpi not destroyed, ioh was
   dict_h		bpi_data;		///< Queue of data vptrs.
   struct bk_ioh *	bpi_ioh;		///< Ioh structure.
   u_int			bpi_size;		///< Amount of data I'm buffering.
